fix: vertically center relayer accounts toolbar and remove extra spacing

--- a/frontend/src/app/views/root-profile/root-profile.component.scss
+++ b/frontend/src/app/views/root-profile/root-profile.component.scss
@@ -754,11 +754,13 @@ mat-radio-button {
     min-width: 140px;
 }
 
-.guardian-user-page-toolbar {
+.guardian-page .guardian-user-page-toolbar {
     display: flex;
+    align-items: center;
     height: 40px;
     justify-content: flex-end;
-    margin: 24px 0px 18px 0px;
+    margin: 0;
+    padding: 0;
 
     .guardian-user-page-filters {
         width: 100%;
@@ -820,6 +822,7 @@ mat-radio-button {
     min-height: calc(100vh - 500px);
     width: 100%;
     position: relative;
+    margin-top: 40px;
 }
 
 .guardian-user-page-buttons {
